# azure-service-list

./: LICENSE  README.md  pyproject.toml
az_service_list/: csv_exporter.py  main.py  services_provider.py
